Cleanup MCP4Gradle file